# transmutary

./: .dockerignore  .env.example  .gitignore  .gitmessage  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
config/: delivery.example.yaml  trend_scope.example.yaml  watchlist.example.yaml
docs/brainstorms/: 2026-05-29-repo-observation-system-requirements.md
docs/plans/: 2026-05-29-001-feat-transmutary-observation-system-plan.md  2026-05-30-001-feat-service-scheduling-wiring-plan.md  2026-05-30-002-feat-promotion-f4-plan.md  2026-05-30-003-feat-l2-embedding-plan.md
docs/plans/goals/: 2026-05-29-phase1-mode-a.goals.md
src/transmutary/: __init__.py  clean.py  cli.py  config.py  dedup.py  filter.py  llm.py  pipeline.py  rerank.py  service.py
src/transmutary/collect/: deps.py  github.py  security.py  trend.py
src/transmutary/deliver/: email.py  rss.py  server.py  stub.py
src/transmutary/report/: diagnose.py  explain.py  schema.py
src/transmutary/store/: artifacts.py  state.py
tests/: conftest.py  test_clean.py  test_cli.py  test_config.py  test_dedup.py  test_filter.py  test_llm.py  test_pipeline.py  test_rerank.py  test_service.py
tests/collect/: test_deps.py  test_github.py  test_security.py  test_trend.py
tests/deliver/: test_email.py  test_outbound.py  test_rss.py  test_server.py  test_stub.py
tests/report/: test_diagnose.py  test_explain.py  test_schema.py
tests/store/: test_artifacts.py  test_state.py
